creative fucks me

--- a/creative/main/CMakeLists.txt
+++ b/creative/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(COMPONENT_SRCDIRS "." )
-set(COMPONENT_ADD_INCLUDEDIRS ".")
-
-register_component()
+idf_component_register(SRCS "main.c"
+                       INCLUDE_DIRS "include"
+                       REQUIRES accelerometer oled sound_amplifier dht
+                      )
